crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__formmarkers.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "geometry": "243_127_688_700_-1_-1_240_0_240_0",
        "type": "window"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "test all the legal form markers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "b",
              "raw_text": "a@b",
              "span": {
                "end": 242,
                "start": 239
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "c",
              "raw_text": "a@c",
              "span": {
                "end": 247,
                "start": 244
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "d",
              "raw_text": "a@d",
              "span": {
                "end": 252,
                "start": 249
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "f",
              "raw_text": "a@f",
              "span": {
                "end": 257,
                "start": 254
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "fp",
              "raw_text": "a@fp",
              "span": {
                "end": 263,
                "start": 259
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "g",
              "raw_text": "a@g",
              "span": {
                "end": 268,
                "start": 265
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "i",
              "raw_text": "a@i",
              "span": {
                "end": 273,
                "start": 270
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "k",
              "raw_text": "a@k",
              "span": {
                "end": 278,
                "start": 275
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "a@l",
              "span": {
                "end": 283,
                "start": 280
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "n",
              "raw_text": "a@n",
              "span": {
                "end": 288,
                "start": 285
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "o",
              "raw_text": "a@o",
              "span": {
                "end": 293,
                "start": 290
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "p",
              "raw_text": "a@p",
              "span": {
                "end": 298,
                "start": 295
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "q",
              "raw_text": "a@q",
              "span": {
                "end": 303,
                "start": 300
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "sas",
              "raw_text": "a@sas",
              "span": {
                "end": 310,
                "start": 305
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "si",
              "raw_text": "a@si",
              "span": {
                "end": 316,
                "start": 312
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "sl",
              "raw_text": "a@sl",
              "span": {
                "end": 322,
                "start": 318
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "t",
              "raw_text": "a@t",
              "span": {
                "end": 327,
                "start": 324
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "wp",
              "raw_text": "a@wp",
              "span": {
                "end": 333,
                "start": 329
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "x",
              "raw_text": "a@x",
              "span": {
                "end": 338,
                "start": 335
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "x",
              "part_of_speech": "adj",
              "raw_text": "a@x$adj",
              "span": {
                "end": 347,
                "start": 340
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
