crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__formmarkersinarow.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Peter",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Lois",
            "role": "Investigator",
            "speaker_code": "LOI"
          },
          {
            "name": "Patsy",
            "role": "Investigator",
            "speaker_code": "PAT"
          },
          {
            "name": "Lynn",
            "role": "Investigator",
            "speaker_code": "LYN"
          },
          {
            "name": "Jenny",
            "role": "Child",
            "speaker_code": "JEN"
          },
          {
            "name": "Aimee",
            "role": "Student",
            "speaker_code": "AIM"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "2;05.22",
        "corpus": "bloom70",
        "group": "normal",
        "language": "eng",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LOI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Investigator",
        "speaker": "PAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LYN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Child",
        "speaker": "JEN",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Student",
        "speaker": "AIM",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "a@l",
              "span": {
                "end": 482,
                "start": 479
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "b",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "b@l",
              "span": {
                "end": 486,
                "start": 483
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "c",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "c@l",
              "span": {
                "end": 490,
                "start": 487
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "d",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "d@l",
              "span": {
                "end": 494,
                "start": 491
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "e",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "e@l",
              "span": {
                "end": 498,
                "start": 495
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "f",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "f@l",
              "span": {
                "end": 502,
                "start": 499
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "g",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "g@l",
              "span": {
                "end": 506,
                "start": 503
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "k",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "k@l",
              "span": {
                "end": 510,
                "start": 507
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ok",
                  "type": "text"
                }
              ],
              "raw_text": "ok",
              "span": {
                "end": 513,
                "start": 511
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "n",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "n@l",
              "span": {
                "end": 517,
                "start": 514
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ok",
                  "type": "text"
                }
              ],
              "raw_text": "ok",
              "span": {
                "end": 520,
                "start": 518
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Peter",
                  "type": "text"
                }
              ],
              "raw_text": "Peter",
              "span": {
                "end": 526,
                "start": 521
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "p",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "p@l",
              "span": {
                "end": 530,
                "start": 527
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "s",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "s@l",
              "span": {
                "end": 534,
                "start": 531
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "y",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "y@l",
              "span": {
                "end": 538,
                "start": 535
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ok",
                  "type": "text"
                }
              ],
              "raw_text": "ok",
              "span": {
                "end": 541,
                "start": 539
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Peter",
                  "type": "text"
                }
              ],
              "raw_text": "Peter",
              "span": {
                "end": 547,
                "start": 542
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "n",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "n@l",
              "span": {
                "end": 552,
                "start": 549
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ok",
                  "type": "text"
                }
              ],
              "raw_text": "ok",
              "span": {
                "end": 555,
                "start": 553
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "n",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "n@l",
              "span": {
                "end": 559,
                "start": 556
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "ok",
                  "type": "text"
                }
              ],
              "raw_text": "ok",
              "span": {
                "end": 562,
                "start": 560
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "Peter",
                  "type": "text"
                }
              ],
              "raw_text": "Peter",
              "span": {
                "end": 568,
                "start": 563
              },
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "q",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "q@l",
              "span": {
                "end": 576,
                "start": 573
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "r",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "r@l",
              "span": {
                "end": 580,
                "start": 577
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "s",
                  "type": "text"
                }
              ],
              "form_type": "l",
              "raw_text": "s@l",
              "span": {
                "end": 584,
                "start": 581
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "AIM": {
      "birth_date": null,
      "code": "AIM",
      "id": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Student",
        "speaker": "AIM"
      },
      "name": "Aimee",
      "role": "Student"
    },
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "2;05.22",
        "corpus": "bloom70",
        "group": "normal",
        "language": "eng",
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": "Peter",
      "role": "Target_Child"
    },
    "JEN": {
      "birth_date": null,
      "code": "JEN",
      "id": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Child",
        "speaker": "JEN"
      },
      "name": "Jenny",
      "role": "Child"
    },
    "LOI": {
      "birth_date": null,
      "code": "LOI",
      "id": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LOI"
      },
      "name": "Lois",
      "role": "Investigator"
    },
    "LYN": {
      "birth_date": null,
      "code": "LYN",
      "id": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Investigator",
        "speaker": "LYN"
      },
      "name": "Lynn",
      "role": "Investigator"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    },
    "PAT": {
      "birth_date": null,
      "code": "PAT",
      "id": {
        "corpus": "bloom70",
        "language": "eng",
        "role": "Investigator",
        "speaker": "PAT"
      },
      "name": "Patsy",
      "role": "Investigator"
    }
  }
}
